Implemented feedback, added field validation, migrated to Net::IP

--- a/dummy_wg_home/large_wg2.conf
+++ b/dummy_wg_home/large_wg2.conf
@@ -5,10 +5,10 @@
 # Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
 #
 # Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 1340094213
+#+Checksum = 3172449070
 
 [Interface]
-Address = 10.0.9.1/24
+Address = 10.0.9.0/24
 ListenPort = 51861
 PrivateKey = AFYZlRklJPkrR8/klk5kObJtS+dOU3hmmw4nvqdTEls=
 #+FQDN = wireguard3.example.com
@@ -18,29 +18,30 @@ PrivateKey = AFYZlRklJPkrR8/klk5kObJtS+dOU3hmmw4nvqdTEls=
 PublicKey = ncq86h6mUaa6WY+QOayL4FxsoWUiCoZ96+vxFAvowzM=
 AllowedIPs = 10.0.9.2/32
 
-#-[Peer]
-#-#+Name = Peer_3
-#-PublicKey = Jn9B4VqGBRdo4EVLf2l/RGBehF6voLBrliF16e+LvjM=
-#-AllowedIPs = 10.0.9.3/32
-#-#+Disabled = 1
-
-#-[Peer]
-#-#+Name = Peer_4
-#-PublicKey = ZEVDq1u5c0MgiYAn5jMl2F95C8mGK5LNYiFdf5+DKR0=
-#-AllowedIPs = 10.0.9.4/32
-#-#+Disabled = 1
-#-#+Description = efwef
-
-#-[Peer]
-#-#+Name = Peer_5
-#-PublicKey = fY6GTl0CtIW9nT9x//jtfxjBKmP3sUB4V7ymaPuFSSo=
-#-AllowedIPs = 10.0.9.5/32
-#-#+Disabled = 1
+[Peer]
+#+Name = Peer_3
+PublicKey = Jn9B4VqGBRdo4EVLf2l/RGBehF6voLBrliF16e+LvjM=
+AllowedIPs = 10.0.9.3/32
+#+Disabled = 0
 
 [Peer]
-#+Name = Peer_6
-PublicKey = PGD1Gm6VN0+atMJxECPv/yU5IP65fDQtxW46uv5rCwg=
-AllowedIPs = 10.0.9.6/32
+#+Name = Peer_4
+PublicKey = ZEVDq1u5c0MgiYAn5jMl2F95C8mGK5LNYiFdf5+DKR0=
+AllowedIPs = 10.0.9.4/32
+#+Disabled = 0
+#+Description = efwef
+
+[Peer]
+#+Name = Peer_5
+PublicKey = fY6GTl0CtIW9nT9x//jtfxjBKmP3sUB4V7ymaPuFSSo=
+AllowedIPs = 10.0.9.5/32
+#+Disabled = 0
+
+#-[Peer]
+#-#+Name = XYC
+#-PublicKey = PGD1Gm6VN0+atMJxECPv/yU5IP65fDQtxW46uv5rCwg=
+#-AllowedIPs = 10.0.9.6/32
+#-#+Disabled = 1
 
 #-[Peer]
 #-#+Name = Peer_7
