--- a/dummy_wg_home/mini_wg0.conf
+++ b/dummy_wg_home/mini_wg0.conf
@@ -5,10 +5,10 @@
 # Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
 #
 # Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 1825663083
+#+Checksum = 4279170719
 
 [Interface]
-Address = 10.0.0.2/24, fdc9:281f:04d7:9ee9::2/64
+Address = 10.0.0.0/24, fdc9:281f:04d7:9ee9::0/64
 ListenPort = 51888
 PrivateKey = MN6ipoevVEFdsQ+vciTdsgeD30e9w0qT2jPZOFotmHQ=
 #+FQDN = wireguard1.example.com
@@ -30,4 +30,10 @@ PublicKey = sVxb85Wz9NUGGu4r9unXg+imRPJsUH1KrrIqBb+WWGw=
 AllowedIPs = 10.0.0.105/32
 #+Alias = test
 #+Description = hello
+
+[Peer]
+#+Name = test_Alias
+PublicKey = 2mO59ijYCvfJUi6pnNO0H697xiZHTzs4mLA5da5m13w=
+AllowedIPs = 10.0.0.1
+#+Alias = tes
 
