--- a/dummy_wg_home/mini_wg1.conf
+++ b/dummy_wg_home/mini_wg1.conf
@@ -5,10 +5,10 @@
 # Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
 #
 # Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 3999959244
+#+Checksum = 2901769940
 
 [Interface]
-Address = 10.0.0.2/24
+Address = 10.0.0.0/24
 ListenPort = 51860
 PrivateKey = AFYZlRklJPkrR8/klk5kObJtS+dOU3hmmw4nvqdTEls=
 #+FQDN = wireguard2.example.com
@@ -30,7 +30,7 @@ AllowedIPs = 10.0.0.8/32
 #+Disabled = 0
 
 #-[Peer]
-#-#+Name = Hello There
+#-#+Name = Hello_There
 #-PublicKey = grgSYBFFeXNEy7Cog+DCpcQWKYXIJ5Q4Nfqqgru8inQ=
 #-AllowedIPs = 10.0.0.228/32
 #-#+Alias = wefwef2
