Fixed search, added mock mail-handler, add-add form is now complete, added default attrs for dns and allowed-ips

--- a/dummy_wg_home/large_wg2.conf
+++ b/dummy_wg_home/large_wg2.conf
@@ -5,7 +5,7 @@
 # Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
 #
 # Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 3172449070
+#+Checksum = 1733353760
 
 [Interface]
 Address = 10.0.9.0/24
@@ -30,12 +30,6 @@ PublicKey = ZEVDq1u5c0MgiYAn5jMl2F95C8mGK5LNYiFdf5+DKR0=
 AllowedIPs = 10.0.9.4/32
 #+Disabled = 0
 #+Description = efwef
-
-[Peer]
-#+Name = Peer_5
-PublicKey = fY6GTl0CtIW9nT9x//jtfxjBKmP3sUB4V7ymaPuFSSo=
-AllowedIPs = 10.0.9.5/32
-#+Disabled = 0
 
 #-[Peer]
 #-#+Name = XYC
@@ -286,4 +280,20 @@ AllowedIPs = 10.0.9.62/32
 PublicKey = GRhlmp9DbRcyHD1nqJ3FwVCOPZDbFQ6ZuSqCBpjGCG8=
 AllowedIPs = 10.0.9.201/32
 #+Alias = tester13434
+
+[Peer]
+#+Name = large_03
+PublicKey = 085MTcidsdxSs7w26LYhHOnsfoR8GDRN0Lcrye0Z+HE=
+AllowedIPs = 10.0.9.8/32
+#+Disabled = 0
+
+[Peer]
+#+Name = large_1111
+PublicKey = vbqh9zZzvdCBnJBAu1Xnq9SaCzZ/UNCNE4KTazbVfkI=
+AllowedIPs = 10.0.9.1/32
+
+[Peer]
+#+Name = large_22222
+PublicKey = I44KdKlJZLuHrZdqJE0NN1gJHXFMFap/xcojM2sGuXY=
+AllowedIPs = 10.0.9.51/32
 
