--- a/dummy_wg_home/mini_wg1.conf
+++ b/dummy_wg_home/mini_wg1.conf
@@ -5,7 +5,7 @@
 # Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
 #
 # Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 2901769940
+#+Checksum = 4087588886
 
 [Interface]
 Address = 10.0.0.0/24
@@ -43,4 +43,22 @@ PublicKey = K4AxKi9igD/gNWvsB+PiZSfu20fSfdh1VLVDUzX+lRI=
 AllowedIPs = 10.0.0.40/32
 #+Description = ewqf
 #+Disabled = 0
+
+[Peer]
+#+Name = Blabla
+PublicKey = iLmC6TDFufgG9vGhRg3YoYG2ieAXoqJx0crG9ZwAU3U=
+AllowedIPs = 0.0.0.0/0, ::/0
+
+[Peer]
+#+Name = Hans
+PublicKey = zHFk6NG8Cqi00AAyRtFavGj3A9fq+Q9sIRlqO5as5EU=
+AllowedIPs = 10.0.0.3
+#+Alias = 
+#+Description = iugciugef
+
+[Peer]
+#+Name = Meier
+PublicKey = nOMv/4PiCuzQ0sdcD3eDB/iPYS0bRBmwHxZx8+20gSc=
+AllowedIPs = 10.0.0.2/32
+#+Email = meier@gmx.ch
 
