--- a/dummy_wg_home/mini_wg0.conf
+++ b/dummy_wg_home/mini_wg0.conf
@@ -5,7 +5,7 @@
 # Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
 #
 # Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 4279170719
+#+Checksum = 60814895
 
 [Interface]
 Address = 10.0.0.0/24, fdc9:281f:04d7:9ee9::0/64
@@ -36,4 +36,41 @@ AllowedIPs = 10.0.0.105/32
 PublicKey = 2mO59ijYCvfJUi6pnNO0H697xiZHTzs4mLA5da5m13w=
 AllowedIPs = 10.0.0.1
 #+Alias = tes
+
+[Peer]
+#+Name = fewfwef
+PublicKey = KpXASgjXPh5xtIxFclQUZzq4PuqbDfHT1CaU8shTsVE=
+AllowedIPs = 10.0.0.2/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0002/128
+#+Email = wefwefwef@ttt.com
+
+[Peer]
+#+Name = Hans
+PublicKey = AS7pabuXW95hpsmiU+qlMN6zTAFBXFo3Ex3KpY16mCE=
+AllowedIPs = 10.0.0.3/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0003/128
+#+Email = meier@test.com
+
+[Peer]
+#+Name = Test
+PublicKey = FZ9yoTG++RR+bJgz3cr+TjXtZscS/QJD0BHbZ6BLeyQ=
+AllowedIPs = 10.0.0.4/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0004/128
+#+Email = hans@mmm.ch
+
+[Peer]
+#+Name = Tobias
+PublicKey = ilwnbpq7iPDLBvHMx8dpSEkY6xJOF0/5XQwTjy28C3E=
+AllowedIPs = 10.0.0.5/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0005/128
+#+Email = Hello@gmx.ch
+
+[Peer]
+#+Name = Tester
+PublicKey = Mu46ORALOMuD/T/uyuBiJNecOps4q80TB6BH6F2W9SA=
+AllowedIPs = 10.0.0.6/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0006/128
+#+Email = hans@bla.com
+
+[Peer]
+#+Name = OOOOOOOO
+PublicKey = mUkItQOH7RkFNod+fT3glxilssdj79MSoXtBS4Ip/3M=
+AllowedIPs = 10.0.0.7/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0007/128
+#+Description = Hallo das ist ein Test
+#+Email = hallo@test.com
 
