--- a/etc/wgwrangler.yaml
+++ b/etc/wgwrangler.yaml
@@ -27,6 +27,10 @@ PLUGIN:
       default-dns: 192.168.0.1
       default-allowed-ips: 192.168.0.0/24
 
+  - WireguardVersions:
+      module: WireguardVersions
+      tab-name: Config Versions
+
   - AdminUser:
       module: Users
       tab-name: Admin User Manager
