--- a/etc/wgwrangler.dist.yaml
+++ b/etc/wgwrangler.dist.yaml
@@ -4,26 +4,32 @@ BACKEND:
   sesame_user: adfadsfasdf4ee3r
 # perl -MDigest::SHA -e 'print Digest::SHA::hmac_sha1_hex("access"),"\n"'
   sesame_pass: 393afhkjhffjj
+  vpn_name: your_vpn_name
+  enable_git: false
+  no_apply: true
+  not_applied_suffix: .not_applied
+  wireguard_home: /dummy/dir
 
 FRONTEND:
 # logo = ../resource/wgwrangler/logo.png
 # logo_small = ../resource/wgwrangler/logo-small.png
-  title: Song List
-  initial_plugin: Songs
+  title: WGwrangler
+  initial_plugin: WireguardShow
   company_name: OETIKER+PARTNER AG
   company_url: http://www.oetiker.ch
 # max_width = 800
 
 PLUGIN:
-  - InitialUser:
-      module: UserForm
-      mode: init
-      type: add
-      tab-name: Create Initial User
+  - WireguardShow:
+      module: WireguardShow
+      tab-name: Wireguard
+      default-dns: 192.168.0.1
+      default-allowed-ips: 192.168.0.0/24
+      enforce_email_success: '1'
 
-  - Songs:
-      module: Song
-      tab-name: Songs
+  - WireguardVersions:
+      module: WireguardVersions
+      tab-name: Config Versions
 
   - AdminUser:
       module: Users
