--- a/frontend/Manifest.json
+++ b/frontend/Manifest.json
@@ -10,7 +10,7 @@
     "authors" : [
         {
             "name" : "Tobias Bossert",
-            "email" : "tobias.bossert@fastpath.ch"
+            "email" : "bossert _at_ oetiker _this_is_a_dot_ ch"
           }
     ],
     "version" : "0.0.1"
