deb packaging improvements

--- a/debian/wg-wrangler.service
+++ b/debian/wg-wrangler.service
@@ -3,9 +3,13 @@ Description=wg-wranger wireguard manager
 
 [Service]
 Type=simple
+Environment=LISTEN_ON=http://127.0.0.1:7171
+Environment=MOJO_MODE=production
+# Environment variables defined in this file (if it exists) override previously defined ones
+EnvironmentFile=opt/wg-wrangler/etc/env.conf
 User=wg-wrangler_manager
 Group=wg-wrangler_manager
-ExecStart=/usr/bin/perl opt/wg-wrangler/bin/wgwrangler.pl prefork --listen 'http://127.0.0.1:7171'
+ExecStart=/usr/bin/perl opt/wg-wrangler/bin/wgwrangler.pl prefork --listen $LISTEN_ON
 
 [Install]
 WantedBy=multi-user.target
