--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ export DH_ALWAYS_EXCLUDE=CVS:.svn:.git:
 
 override_dh_auto_configure:
 	./bootstrap
-	./configure --prefix=/opt/wg-wrangler
+	./configure --prefix=/opt/wg-wrangler --sysconfdir=/etc/opt/wg-wrangler --localstatedir=/var/opt/wg-wrangler
 
 %:
 	dh $@
