fixed some validation errors, compatibility with wg-meta 0.3.x,version++

--- a/t/dummy_home/wg0.conf
+++ b/t/dummy_home/wg0.conf
@@ -1,43 +1,45 @@
-# This config is generated and maintained by wg-meta.
-# It is strongly recommended to edit this config only through a supporting wg-meta
-# implementation (e.g the wg-meta cli interface)
-#
-# Changes to this header are always overwritten, you can add normal comments in [Peer] and [Interface] section though.
-#
-# Support and issue tracker: https://github.com/sirtoobii/wg-meta
-#+Checksum = 229354359
+#+Checksum = 3186310980
 
 [Interface]
 Address = 10.0.10.0/24, fdc9:281f:04d7:9ee9::0/64
 ListenPort = 51888
 PrivateKey = MN6ipoevVEFdsQ+vciTdsgeD30e9w0qT2jPZOFotmHQ=
-#+FQDN = wireguard1.example.com
+#+fqdn = wireguard1.example.com
 
 [Peer]
-#+Name = CCCCC
+#+name = CCCCC
 PublicKey = 2mO59ijYCvfJUi6pnNO0H697xiZHTzs4mLA5da5m13w=
 AllowedIPs = 10.0.10.1/32
 #+Alias = tes
+#+device = wefwefef
+#+description = wefwefwef
+
+[Peer]
+#+name = DDDDD
+PublicKey = KpXASgjXPh5xtIxFclQUZzq4PuqbDfHT1CaU8shTsVE=
+AllowedIPs = 10.0.10.2/32
+#+email = wefwefwef@ttt.com
+#+description = zöziöwaqdwqdqwdwadqwdqwd
 
 #-[Peer]
-#-#+Name = DDDDD
-#-PublicKey = KpXASgjXPh5xtIxFclQUZzq4PuqbDfHT1CaU8shTsVE=
-#-AllowedIPs = 10.0.10.2/32
-#-#+Email = wefwefwef@ttt.com
-#-#+Description = zöziöwaqdwqdqwdwadqwdqwd
-#-#+Disabled = 1
+#-#+name = Tester
+#-PublicKey = Mu46ORALOMuD/T/uyuBiJNecOps4q80TB6BH6F2W9SA=
+#-AllowedIPs = 10.0.10.6/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0006/128
+#-#+Email = hans@bla.com
+#-#+Description = iu.i.uä0äu90
 
 [Peer]
-#+Name = Tester
-PublicKey = Mu46ORALOMuD/T/uyuBiJNecOps4q80TB6BH6F2W9SA=
-AllowedIPs = 10.0.10.6/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0006/128
-#+Email = hans@bla.com
-#+Description = iu.i.uä0äu90
-
-[Peer]
-#+Name = OOOOOOOO
+#+name = OOOOOOOO
 PublicKey = mUkItQOH7RkFNod+fT3glxilssdj79MSoXtBS4Ip/3M=
 AllowedIPs = 10.0.10.7/32
-#+Description = Hallo das ist ein Testwefwef
-#+Email = hallo@test.com
+#+description = Hallo das ist ein Testwefwef
+#+email = hallo@test.com
 
+#-[Peer]
+#-PublicKey = dummy_pub_key
+#-AllowedIPs = 10.0.10.1/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0001/128
+#-#+name = Hansli_tab2
+#-#+email = hansli@gmx.ch
+#-#+device = hansli_tab_device
+#-#+created = 2021-07-18 13:15:05 +0200
+#-#+description = DSEC with spaces
