Added ubuntu 22 build target, updated dependencies

--- a/.github/actions/build-release-action/Dockerfile
+++ b/.github/actions/build-release-action/Dockerfile
@@ -1,16 +1,17 @@
 ARG IMAGE_VERSION_TAG
+ARG NODE_VERSION
 
 FROM ubuntu:$IMAGE_VERSION_TAG
 
 LABEL maintainer="oetiker" \
       description="WG-wrangler builder"
 
-
 ENV DEBIAN_FRONTEND noninteractive
 
+ARG NODE_VERSION
 RUN apt-get -y update && \
     apt-get -y install apt-utils curl && \
-    curl https://deb.nodesource.com/setup_12.x | bash && \
+    curl https://deb.nodesource.com/setup_$NODE_VERSION | bash && \
     apt-get -u update && \
     apt-get -y install perl \
         make \
