--- a/frontend/Manifest.json
+++ b/frontend/Manifest.json
@@ -24,7 +24,6 @@
     "translation" : "source/translation"
   },
   "requires": {
-    "@qooxdoo/framework": "^6.0.0-beta",
-    "@qooxdoo/compiler" : "^1.0.0-beta"
+    "@qooxdoo/framework": "^7.3.1"
   }
 }
