fixed ip suggestions, fixed automated testing trigger

--- a/.github/actions/build-release-action/action.yaml
+++ b/.github/actions/build-release-action/action.yaml
@@ -11,8 +11,7 @@ inputs:
     default: latest
   node_version:
     description: Node version for building the debian package
-    required: false
-    default: 18.x
+    required: true
 
 outputs:
   package_name:
