--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -4,8 +4,8 @@ on:
   push:
     paths-ignore:
       - '**.md'
-    tags-ignore:
-      - 'v*'
+    branches:
+      - '**'
   pull_request:
     paths-ignore:
       - '**.md'
