--- a/t/dummy_home/wg0.conf
+++ b/t/dummy_home/wg0.conf
@@ -1,4 +1,4 @@
-#+Checksum = 3186310980
+#+Checksum = 1626909375
 
 [Interface]
 Address = 10.0.10.0/24, fdc9:281f:04d7:9ee9::0/64
@@ -9,7 +9,7 @@ PrivateKey = MN6ipoevVEFdsQ+vciTdsgeD30e9w0qT2jPZOFotmHQ=
 [Peer]
 #+name = CCCCC
 PublicKey = 2mO59ijYCvfJUi6pnNO0H697xiZHTzs4mLA5da5m13w=
-AllowedIPs = 10.0.10.1/32
+AllowedIPs = 10.0.10.50/32
 #+Alias = tes
 #+device = wefwefef
 #+description = wefwefwef
@@ -17,29 +17,45 @@ AllowedIPs = 10.0.10.1/32
 [Peer]
 #+name = DDDDD
 PublicKey = KpXASgjXPh5xtIxFclQUZzq4PuqbDfHT1CaU8shTsVE=
-AllowedIPs = 10.0.10.2/32
+AllowedIPs = 10.0.10.51/32
 #+email = wefwefwef@ttt.com
 #+description = zöziöwaqdwqdqwdwadqwdqwd
 
 #-[Peer]
 #-#+name = Tester
 #-PublicKey = Mu46ORALOMuD/T/uyuBiJNecOps4q80TB6BH6F2W9SA=
-#-AllowedIPs = 10.0.10.6/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0006/128
+#-AllowedIPs = 10.0.10.52/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0006/128
 #-#+Email = hans@bla.com
 #-#+Description = iu.i.uä0äu90
 
 [Peer]
 #+name = OOOOOOOO
 PublicKey = mUkItQOH7RkFNod+fT3glxilssdj79MSoXtBS4Ip/3M=
-AllowedIPs = 10.0.10.7/32
+AllowedIPs = 10.0.10.53/32
 #+description = Hallo das ist ein Testwefwef
 #+email = hallo@test.com
 
-#-[Peer]
-#-PublicKey = dummy_pub_key
-#-AllowedIPs = 10.0.10.1/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0001/128
-#-#+name = Hansli_tab2
-#-#+email = hansli@gmx.ch
-#-#+device = hansli_tab_device
-#-#+created = 2021-07-18 13:15:05 +0200
-#-#+description = DSEC with spaces
+[Peer]
+PublicKey = dummy_pub_key
+AllowedIPs = 10.0.10.54/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0001/128
+#+name = Hansli_tab2
+#+email = hansli@gmx.ch
+#+device = hansli_tab_device
+#+created = 2021-07-18 13:15:05 +0200
+#+description = DSEC with spaces
+
+[Peer]
+PublicKey = dummy_pub_key8818
+AllowedIPs = 10.0.10.8/32,fdc9:281f:04d7:9ee9:0000:0000:0000:0001/128
+#+name = Tobias
+#+email = bossert@oetiker.ch
+#+device = Bla
+#+created = 2023-03-17 19:00:09 +0100
+
+[Peer]
+PublicKey = dummy_pub_key761
+AllowedIPs = fdc9:281f:04d7:9ee9:0000:0000:0000:0000/128
+#+name = T
+#+email = bossert@oetiker.ch
+#+device = wef
+#+created = 2023-03-17 19:01:16 +0100
