--- a/debian/wg-wrangler.service
+++ b/debian/wg-wrangler.service
@@ -6,7 +6,7 @@ Type=simple
 Environment=LISTEN_ON=http://127.0.0.1:7171
 Environment=MOJO_MODE=production
 Environment=MOJO_LOG_LEVEL=info
-Environment=WGwrangler_CONFIG=/etc/opt/wg-wrangler/wgwrangler.yaml
+Environment=WGwrangler_CONFIG_HOME=/etc/opt/wg-wrangler
 
 # Environment variables defined in this file (if it exists) override previously defined ones
 EnvironmentFile=-/etc/opt/wg-wrangler/env.conf
