correctly sort numbers, send only on success, include email template in pkg, version++
Signed-off-by: Tobias Bossert <bossert@oetiker.ch>

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -1,5 +1,5 @@
 
 
-ETC = wgwrangler.dist.yaml env.dist.conf
+ETC = wgwrangler.dist.yaml env.dist.conf send_config_by_email.dist.ep
 EXTRA_DIST = $(ETC)
 sysconf_DATA = $(ETC)
